[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "Cython"
]
build-backend = "setuptools.build_meta"

[project]
name = "s-a-l"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.2.4",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pyyaml>=6.0.3",
    "setuptools>=82.0.1",
]
